@@ -74,12 +74,31 @@
 
     </LinearLayout>
 
-    <TextView
-      android:id="@+id/user"
-      style="@style/Widget.Grocy.TextView.ListItem.Description"
-      android:layout_width="match_parent"
+    <LinearLayout
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:singleLine="true" />
+      android:orientation="horizontal"
+      android:gravity="center_vertical">
+
+      <TextView
+        android:id="@+id/user"
+        style="@style/Widget.Grocy.TextView.ListItem.Description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"/>
+
+      <ImageView
+        android:id="@+id/image_reassign"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_round_swap_horiz"
+        android:visibility="gone"
+        tools:ignore="ContentDescription"
+        app:tint="@color/on_background_secondary" />
+
+    </LinearLayout>
 
   </LinearLayout>
 
